<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/regLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        tools:context=".activities.LoginActivity"
        tools:layout_editor_absoluteX="-190dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/passconfirmReg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/confitmpas_hint"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailReg"
            app:layout_constraintVertical_bias="0.162" />

        <EditText
            android:id="@+id/emailReg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.403" />

        <Button
            android:id="@+id/LoginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:background="#c7c7c7"
            android:hint="@string/signup_hint"
            android:textColorLink="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passconfirmReg"
            tools:text="@string/login_text" />

        <EditText
            android:id="@+id/passwordReg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/passconfirmReg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailReg" />

        <ImageButton
            android:id="@+id/Back"
            android:layout_width="78dp"
            android:layout_height="48dp"
            android:background="#ffffff"
            android:clickable="true"
            android:contentDescription="@string/back_content"
            android:focusable="true"
            app:layout_constraintBottom_toTopOf="@+id/emailReg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.123"
            app:srcCompat="?attr/homeAsUpIndicator" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>