<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="735dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/blogUserImage"
                android:layout_width="57dp"
                android:layout_height="50dp"
                android:contentDescription="@string/listpic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.003"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.029"
                app:srcCompat="@drawable/baseline_portrait_black_18dp" />

            <TextView
                android:id="@+id/blogUserName"
                android:layout_width="94dp"
                android:layout_height="30dp"
                android:text="@string/namename_hint"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.061"
                app:layout_constraintStart_toEndOf="@+id/blogUserImage"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.028"
                tools:text="name" />

            <TextView
                android:id="@+id/blogUserDate"
                android:layout_width="85dp"
                android:layout_height="24dp"
                android:text="@string/date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.232"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blogUserName"
                app:layout_constraintVertical_bias="0.0"
                tools:text="date" />

            <ImageView
                android:id="@+id/blogUserPost"
                android:layout_width="437dp"
                android:layout_height="289dp"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blogUserImage"
                app:layout_constraintVertical_bias="0.063"
                app:srcCompat="@drawable/add" />

            <TextView
                android:id="@+id/mainBlogPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blogUserPost"
                app:layout_constraintVertical_bias="0.0"
                tools:text="post" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>